# hawk

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  REFERENCES.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
.pdm-build/: pyproject.toml
.pdm-build/src/src/hawk/: version.py
docs/: debug-variables.md  env-variables.md  index.md  zpages.md
docs/integrations/: fastapi.md  flask.md  index.md  starlette.md
docs/profiling/: cpu.md  memory.md  misc.md
docs/reference/: index.md  profiling.md
examples/fastapi-example/: README.md  pyproject.toml
examples/fastapi-example/src/fastapi_example/: main.py
examples/theoffice/: .gitignore  Makefile  README.md  pyproject.toml
examples/theoffice/src/theoffice/: health.py  main.py
examples/theoffice/src/theoffice/assets/s1/: s1.json  s1e1.json  s1e2.json  s1e3.json  s1e4.json  s1e5.json  s1e6.json
examples/theoffice/src/theoffice/assets/s2/: s2.json  s2e1.json  s2e10.json  s2e11.json  s2e12.json  s2e13.json  s2e14.json  s2e15.json  s2e16.json  s2e17.json  s2e18.json  s2e19.json  s2e2.json  s2e20.json  s2e21.json  s2e22.json  s2e3.json  s2e4.json  s2e5.json  s2e6.json  s2e7.json  s2e8.json  s2e9.json
examples/theoffice/src/theoffice/assets/s3/: s3.json  s3e1.json  s3e10.json  s3e12.json  s3e13.json  s3e14.json  s3e15.json  s3e16.json  s3e17.json  s3e18.json  s3e19.json  s3e2.json  s3e20.json  s3e21.json  s3e22.json  s3e23.json  s3e24.json  s3e3.json  s3e4.json  s3e5.json  s3e6.json  s3e7.json  s3e8.json  s3e9.json
examples/theoffice/src/theoffice/assets/s4/: s4.json  s4e1.json  s4e10.json  s4e11.json  s4e12.json  s4e13.json  s4e14.json  s4e15.json  s4e16.json  s4e17.json  s4e18.json  s4e3.json  s4e5.json  s4e7.json  s4e9.json
examples/theoffice/src/theoffice/assets/s5/: s5.json  s5e1.json  s5e10.json  s5e11.json  s5e12.json  s5e13.json  s5e14.json  s5e16.json  s5e17.json  s5e18.json  s5e19.json  s5e20.json  s5e21.json  s5e22.json  s5e23.json  s5e24.json  s5e25.json  s5e26.json  s5e27.json  s5e28.json  s5e3.json  s5e4.json  s5e5.json  s5e6.json  s5e7.json  s5e8.json  s5e9.json
examples/theoffice/src/theoffice/assets/s6/: s6.json  s6e1.json  s6e10.json  s6e11.json  s6e12.json  s6e13.json  s6e14.json  s6e15.json  s6e16.json  s6e17.json  s6e19.json  s6e2.json  s6e20.json  s6e21.json  s6e22.json  s6e23.json  s6e24.json  s6e25.json  s6e26.json  s6e3.json  s6e4.json  s6e6.json  s6e7.json  s6e8.json  s6e9.json
examples/theoffice/src/theoffice/assets/s7/: s7.json  s7e1.json  s7e10.json  s7e11.json  s7e13.json  s7e14.json  s7e15.json  s7e16.json  s7e17.json  s7e18.json  s7e19.json  s7e2.json  s7e20.json  s7e21.json  s7e22.json  s7e23.json  s7e24.json  s7e25.json  s7e3.json  s7e4.json  s7e5.json  s7e6.json  s7e7.json  s7e8.json  s7e9.json
examples/theoffice/src/theoffice/assets/s8/: s8.json  s8e1.json  s8e10.json  s8e11.json  s8e12.json  s8e13.json  s8e14.json  s8e15.json  s8e16.json  s8e17.json  s8e18.json  s8e19.json  s8e2.json  s8e20.json  s8e21.json  s8e22.json  s8e23.json  s8e24.json  s8e3.json  s8e4.json  s8e5.json  s8e6.json  s8e7.json  s8e8.json  s8e9.json
examples/theoffice/src/theoffice/assets/s9/: s9.json  s9e1.json  s9e10.json  s9e11.json  s9e12.json  s9e13.json  s9e14.json  s9e15.json  s9e16.json  s9e17.json  s9e18.json  s9e19.json  s9e2.json  s9e20.json  s9e21.json  s9e22.json  s9e24.json  s9e3.json  s9e4.json  s9e5.json  s9e6.json  s9e7.json  s9e8.json  s9e9.json
examples/theoffice/src/theoffice/debug/: router.py
examples/theoffice/src/theoffice/show/: exceptions.py  manager.py  router.py  schemas.py
src/hawk/: version.py
src/hawk/contrib/fastapi/: __init__.py  middleware.py  router.py
src/hawk/contrib/flask/: router.py
src/hawk/contrib/starlette/: middleware.py  response.py  router.py
src/hawk/profiling/: exceptions.py  memory.py  profilers.py  renderers.py
src/hawk/profiling/cpu/: pyinstrument.py
src/hawk/profiling/mem/: __init__.py  tracemalloc.py
src/hawk/zpages/: __init__.py  exceptions.py  page.py  routes.py  sample.html  subheader.py  templates.py  theme.py
src/hawk/zpages/components/: __init__.py  base.py  columns.py  container.py  footer.py  header.py  subheader.py  tables.py
src/hawk/zpages/templates/: footer.html.j2  header.html.j2  page.html.j2  table.html.j2  theme_toggle.html.j2
tests/zpages/components/: test_container.py
