[project]
name = "hawk"
version = "0.0.1"
description = "A dubugging & profiling toolkit for production Python microservices"
authors = [
    {name = "Roman Glushko", email = "roman.glushko.m@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "fastapi>=0.111.1",
]
