[project]
name = "hawk-debug"
dynamic = []
description = "A dubugging & profiling toolkit for production Python microservices"
authors = [
    { name = "Roman Glushko", email = "roman.glushko.m@gmail.com" },
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
version = "0.1.dev7+g2715fed.d20240909"

[project.license]
text = "MIT"

[project.optional-dependencies]
pyinstrument = [
    "pyinstrument>=4.7.2",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"
write_to = "src/hawk/version.py"
write_template = "# Copyright (c) 2024 Roman Hlushko and various contributors\n#\n# Licensed under the Apache License, Version 2.0 (the \"License\");\n# you may not use this file except in compliance with the License.\n# You may obtain a copy of the License at\n#\n# http://www.apache.org/licenses/LICENSE-2.0\n#\n# Unless required by applicable law or agreed to in writing, software\n# distributed under the License is distributed on an \"AS IS\" BASIS,\n# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n# See the License for the specific language governing permissions and\n# limitations under the License.\n\n__version__ = '{}'\n"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "fastapi>=0.111.1",
    "starlette>=0.37.2",
    "flask>=3.0.3",
]
